--- a/LoginDemo/src/main/res/layout/fragment_find.xml
+++ b/LoginDemo/src/main/res/layout/fragment_find.xml
@@ -17,8 +17,8 @@
         android:paddingBottom="8dp">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/image_size_option"
+            android:layout_height="@dimen/image_size_option"
             android:layout_gravity="center|center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="7dp"
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:text="日期选择"
-            android:textColor="?android:attr/textColorPrimary">
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_option">
 
         </TextView>
     </LinearLayout>
@@ -46,8 +47,8 @@
         android:paddingBottom="8dp">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/image_size_option"
+            android:layout_height="@dimen/image_size_option"
             android:layout_gravity="center|center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="7dp"
@@ -59,7 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:text="时间选择"
-            android:textColor="?android:attr/textColorPrimary">
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_option">
 
         </TextView>
     </LinearLayout>
@@ -75,8 +77,8 @@
         android:paddingBottom="8dp">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/image_size_option"
+            android:layout_height="@dimen/image_size_option"
             android:layout_gravity="center|center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="7dp"
@@ -88,7 +90,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:text="秒表"
-            android:textColor="?android:attr/textColorPrimary">
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_option">
 
         </TextView>
     </LinearLayout>
@@ -104,8 +107,8 @@
         android:paddingBottom="8dp">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/image_size_option"
+            android:layout_height="@dimen/image_size_option"
             android:layout_gravity="center|center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="7dp"
@@ -117,7 +120,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:text="播放器"
-            android:textColor="?android:attr/textColorPrimary">
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_option">
 
         </TextView>
     </LinearLayout>
