--- a/LoginDemo/src/main/res/layout/activity_main.xml
+++ b/LoginDemo/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
                 android:layout_width="@dimen/toolbar_height"
                 android:layout_height="@dimen/toolbar_height"
                 android:padding="2dp"
+                android:layout_marginEnd="10dp"
                 android:src="@drawable/add"
                 android:theme="@style/IconTheme"
                 app:layout_constraintRight_toRightOf="parent"
