--- a/LoginDemo/src/main/res/layout/fragment_profile.xml
+++ b/LoginDemo/src/main/res/layout/fragment_profile.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_func_divide"
         android:background="?colorPrimaryVariant"
+        android:minHeight="@dimen/height_option"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
@@ -85,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_func_divide"
         android:background="?colorPrimaryVariant"
+        android:minHeight="@dimen/height_option"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
