--- a/LoginDemo/src/main/res/layout/layout_player.xml
+++ b/LoginDemo/src/main/res/layout/layout_player.xml
@@ -8,7 +8,7 @@
     <ImageButton
         android:id="@+id/play"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@drawable/rp_play"
         android:src="@drawable/btn_play" />
