--- a/LoginDemo/src/main/res/layout/layout_player.xml
+++ b/LoginDemo/src/main/res/layout/layout_player.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
+
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:src="@drawable/diga" />
 
     <ImageButton
         android:id="@+id/play"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/img"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:background="@drawable/rp_play"
-        android:src="@drawable/btn_play" />
+        android:src="@drawable/btn_play"
+        android:layout_marginBottom="40dp"/>
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/stop"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_weight="1"-->
-<!--        android:background="@drawable/rp_play"-->
-<!--        android:src="@drawable/btn_stop" />-->
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/stop"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_weight="1"-->
+    <!--        android:background="@drawable/rp_play"-->
+    <!--        android:src="@drawable/btn_stop" />-->
 
-</LinearLayout>
+</RelativeLayout>
