--- a/MyWeChat/src/main/res/layout/fragment_message_list.xml
+++ b/MyWeChat/src/main/res/layout/fragment_message_list.xml
@@ -10,4 +10,4 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.home.MessageFragment"
-    tools:listitem="@layout/fragment_message" />
+    tools:listitem="@layout/fragment_message_item" />
