--- a/MyWeChat/src/main/res/layout/fragment_message_item.xml
+++ b/MyWeChat/src/main/res/layout/fragment_message_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="horizontal">
+    android:paddingVertical="6dp">
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <LinearLayout
+        android:layout_toEndOf="@+id/avatar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -25,17 +25,12 @@
             android:layout_height="match_parent"
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/text_margin"></TextView>
+            android:layout_margin="@dimen/text_margin"/>
     </LinearLayout>
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-</LinearLayout>
+</RelativeLayout>
