--- a/MyWeChat/src/main/res/layout/fragment_message_item.xml
+++ b/MyWeChat/src/main/res/layout/fragment_message_item.xml
@@ -9,28 +9,30 @@
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <LinearLayout
-        android:layout_toEndOf="@+id/avatar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/text_margin"
+        android:layout_toEndOf="@+id/avatar"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/remark"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/text_margin"
+            android:layout_marginHorizontal="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:textSize="20sp" />
+            android:textSize="27sp" />
 
         <TextView
             android:id="@+id/preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/text_margin"/>
+            android:layout_marginHorizontal="@dimen/text_margin"
+            android:textSize="16sp" />
     </LinearLayout>
 </RelativeLayout>
