--- a/MyWeChat/src/main/res/layout/fragment_address_book_item.xml
+++ b/MyWeChat/src/main/res/layout/fragment_address_book_item.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:background="@color/gray"
         android:paddingHorizontal="@dimen/padding_option"
-        android:paddingVertical="3dp" />
+        android:paddingVertical="3dp"
+        android:textColor="?android:textColorPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
+            android:textColor="?android:textColorPrimary"
             android:textSize="30sp" />
     </LinearLayout>
 </RelativeLayout>
