--- a/MyWeChat/src/main/res/layout/fragment_address_book_item.xml
+++ b/MyWeChat/src/main/res/layout/fragment_address_book_item.xml
@@ -7,7 +7,7 @@
         android:id="@+id/catalog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray"
+        android:background="?colorPrimary"
         android:paddingHorizontal="@dimen/padding_option"
         android:paddingVertical="3dp"
         android:textColor="?android:textColorPrimary" />
