--- a/MyWeChat/src/main/res/values/dimens.xml
+++ b/MyWeChat/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="text_size_option">21sp</dimen>
     <dimen name="image_size_option">29dp</dimen>
     <dimen name="height_option">55dp</dimen>
+    <dimen name="margin_toolbar_btn">6dp</dimen>
 </resources>
