--- a/MyWeChat/src/main/res/layout/activity_services.xml
+++ b/MyWeChat/src/main/res/layout/activity_services.xml
@@ -16,6 +16,7 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_toolbar_btn"
             android:src="@drawable/back"
             android:theme="@style/IconTheme" />
 
@@ -34,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/margin_toolbar_btn"
             android:src="@drawable/more"
             android:theme="@style/IconTheme" />
     </RelativeLayout>
