--- a/MyWeChat/src/main/res/layout/activity_setting.xml
+++ b/MyWeChat/src/main/res/layout/activity_setting.xml
@@ -17,6 +17,7 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_toolbar_btn"
             android:src="@drawable/back"
             android:theme="@style/IconTheme" />
 
