--- a/MyWeChat/src/main/res/layout/activity_chat.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat.xml
@@ -48,6 +48,10 @@
         android:layout_below="@+id/toolbar"
         android:background="?colorPrimaryVariant">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test" />
 
     </ScrollView>
 
@@ -84,6 +88,26 @@
             android:layout_marginVertical="7dp"
             android:background="@color/wechat_green"
             android:text="发送"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <!--drawer-->
+    <LinearLayout
+        android:id="@+id/bottom_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:background="?colorPrimaryVariant"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_marginHorizontal="3dp"
+            android:layout_marginVertical="7dp"
+            android:background="@color/wechat_green"
+            android:text="表情包"
             android:textSize="20sp" />
     </LinearLayout>
 </RelativeLayout>
