--- a/MyWeChat/src/main/res/layout/activity_chat.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat.xml
@@ -95,19 +95,31 @@
     <LinearLayout
         android:id="@+id/bottom_drawer"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="350dp"
         android:layout_alignParentBottom="true"
         android:background="?colorPrimaryVariant"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:visibility="gone">
 
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_marginHorizontal="3dp"
-            android:layout_marginVertical="7dp"
-            android:background="@color/wechat_green"
-            android:text="表情包"
-            android:textSize="20sp" />
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/icon_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我的收藏" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="表情商城" />
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/icon_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </RelativeLayout>
