--- a/MyWeChat/src/main/res/layout/fragment_icon_grid.xml
+++ b/MyWeChat/src/main/res/layout/fragment_icon_grid.xml
@@ -9,6 +9,11 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:visibility="gone" />
+
+    <GridView
+        android:id="@+id/icon_grid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
