--- a/MyWeChat/src/main/res/layout/fragment_message_item.xml
+++ b/MyWeChat/src/main/res/layout/fragment_message_item.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/remark"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="@dimen/text_margin"
