--- a/MyWeChat/src/main/res/navigation/mobile_navigation.xml
+++ b/MyWeChat/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/wechat_home"
-        android:name="edu.ytu.wechat.ui.home.MessageFragment"
+        android:name="edu.ytu.wechat.ui.home.MessageListFragment"
         android:label="@string/title_wechat_home"
         tools:layout="@layout/fragment_message_list" />
 
