--- a/MyWeChat/src/main/res/layout/fragment_address_book_list.xml
+++ b/MyWeChat/src/main/res/layout/fragment_address_book_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,5 +14,7 @@
     <edu.ytu.wechat.ui.addressBook.WaveSideBar
         android:id="@+id/side_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:sidebar_text_size="16dp"
+        app:sidebar_text_color="?android:textColorPrimary" />
 </RelativeLayout>
