--- a/MyWeChat/src/main/res/layout/activity_chat.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat.xml
@@ -41,19 +41,13 @@
             android:theme="@style/IconTheme" />
     </RelativeLayout>
 
-    <!--chat scrollView-->
-    <ScrollView
+    <!--chat recyclerView-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chat_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:background="?colorPrimaryVariant">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test" />
-
-    </ScrollView>
+        android:background="?colorPrimaryVariant"/>
 
     <!--edit area-->
     <LinearLayout
