--- a/MyWeChat/src/main/res/layout/activity_chat.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat.xml
@@ -59,6 +59,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/input_content"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="8dp"
@@ -76,6 +77,7 @@
             android:textSize="20sp" />
 
         <Button
+            android:id="@+id/send_btn"
             android:layout_width="75dp"
             android:layout_height="38dp"
             android:layout_marginHorizontal="3dp"
