--- a/MyWeChat/src/main/res/layout/activity_chat.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat.xml
@@ -46,6 +46,7 @@
         android:id="@+id/chat_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/edit_area"
         android:layout_below="@+id/toolbar"
         android:background="?colorPrimaryVariant"/>
 
