--- a/MyWeChat/src/main/res/layout/activity_chat_item.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat_item.xml
@@ -1,32 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp">
 
-    <TextView
-        android:id="@+id/msg_other"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="6dp"
-        android:background="@drawable/msg_left"
-        android:gravity="center_vertical"
-        android:padding="7dp"
-        android:text="对方的消息"
-        android:textColor="@color/black"
-        android:textSize="25sp" />
+        android:layout_marginStart="6dp">
 
-    <TextView
-        android:id="@+id/msg_yours"
+        <ImageView
+            android:id="@+id/avatar_other"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/avatar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/msg_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/msg_left"
+            android:gravity="center_vertical"
+            android:padding="7dp"
+            android:text="对方的消息"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintStart_toEndOf="@+id/avatar_other"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="6dp"
-        android:background="@drawable/msg_right"
-        android:gravity="center_vertical"
-        android:padding="7dp"
-        android:text="你的消息"
-        android:textColor="@color/black"
-        android:textSize="25sp" />
+        android:layout_marginEnd="6dp">
+
+        <TextView
+            android:id="@+id/msg_yours"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/msg_right"
+            android:gravity="center_vertical"
+            android:padding="7dp"
+            android:text="你的消息"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toStartOf="@+id/avatar_yours"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/avatar_yours"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/avatar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
