--- a/MyWeChat/src/main/res/layout/activity_chat_item.xml
+++ b/MyWeChat/src/main/res/layout/activity_chat_item.xml
@@ -6,6 +6,7 @@
     android:layout_marginVertical="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -32,14 +33,35 @@
             android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@+id/avatar_other"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/icon_other"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:gravity="center_vertical"
+            android:padding="7dp"
+            app:layout_constraintStart_toEndOf="@+id/avatar_other"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/yours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="6dp">
+
+        <ImageView
+            android:id="@+id/icon_yours"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/msg_right"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:src="@drawable/avatar"
+            app:layout_constraintEnd_toStartOf="@+id/avatar_yours"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/msg_yours"
